Fix z-index for walkonwater background

--- a/style.css
+++ b/style.css
@@ -327,7 +327,7 @@ button {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  z-index: -2; /* Place it behind the game canvas */
+  z-index: -1; /* Place it behind the game canvas */
 }
 
 #background-walkonwater .hero-image {
